<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Myo Application Development
  ~ Copyright (C) 2014  Nicolas Arciniega
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>

    <string name="app_name">MyoPlayground</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu Strings -->
    <string name="menu_title">Welcome to MYO Playground!</string>
    <string-array name="menu_title_array">
        <item>Text Response</item>
        <item>Audio Controller</item>
    </string-array>
    <string-array name="menu_description_array">
        <item>See if Myo can recognize your gestures</item>
        <item>Try controlling system volume with gestures</item>
    </string-array>

    <!-- Myo Text Response Strings -->
    <string name="text_response_title">Text Response Tool</string>
    <string name="text_response_recognized">Arm Recognized!</string>
    <string name="text_response_not_recognized">Waiting for arm sync…</string>

    <string name="text_response_arm">Arm: </string>
    <string name="text_response_xdirection">XDirection: </string>

    <string name="text_response_quaternion_title"><u>Quaternion</u></string>
    <string name="text_response_quaternion_coordinates">Coordinates…</string>
    <string name="text_response_coordinate_x">X: </string>
    <string name="text_response_coordinate_y">Y: </string>
    <string name="text_response_coordinate_z">Z: </string>
    <string name="text_response_coordinate_w">W: </string>
    <string name="text_response_coordinate_length">length: </string>
    <string name="text_response_quaternion_calculated">Calculated values…</string>
    <string name="text_response_quaternion_roll">roll: </string>
    <string name="text_response_quaternion_pitch">pitch: </string>
    <string name="text_response_quaternion_yaw">yaw: </string>
    
    <string name="text_response_acceleration_title"><u>Acceleration</u></string>

    <string name="text_response_gyroscope_title"><u>Gyroscope</u></string>

    <string name="text_response_rssi_title"><u>RSSI</u></string>
    <string name="text_response_rssi_strength">Signal strength:</string>

    <!-- Myo Audio Controller Strings -->
    <string name="audio_controller_title">Audio Controller</string>
    <string name="audio_controller_rotation">Arm rotation: </string>
    <string name="audio_controller_active">Input active: </string>
    <string name="audio_controller_volume_mode">Volume Mode: </string>

    <!-- Colors -->
    <color name="gray">#AAAAAA</color>
    <color name="red">#E10000</color>
    <color name="green">#1C9800</color>

</resources>
